--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,18 @@ requests==2.25.1
 sqlparse==0.4.1
 urllib3==1.26.4
 whitenoise==5.2.0
+asgiref==3.3.1
+certifi==2020.12.5
+chardet==4.0.0
+dj-database-url==0.5.0
+Django==3.1.5
+django-on-heroku==1.1.2
+gunicorn==20.1.0
+idna==2.10
+Pillow==8.2.0
+psycopg2-binary==2.8.6
+pytz==2020.5
+requests==2.25.1
+sqlparse==0.4.1
+urllib3==1.26.4
+whitenoise==5.2.0
